# marksclock

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
esphome/: rf_bridge.yaml
marksclock/: __init__.py  __main__.py  app.py  client.py  config.py  state.py
marksclock/routers/: alarms.py  calendar.py  clock.py  converters.py  meeting.py  pomodoro.py  reference.py  stopwatch.py  sun.py  timers.py  worldclock.py
marksclock/static/: manifest.json  sw.js
marksclock/static/css/: clock.css  style.css
marksclock/static/js/: alarms.js  app.js  calendar.js  clock.js  converters.js  meeting.js  pomodoro.js  reference.js  stopwatch.js  sun.js  timers.js  utils.js  worldclock.js
marksclock/templates/: index.html
markslamp/: __init__.py  __main__.py  models.py  scanner.py  switch_manager.py  web.py
markslamp/protocols/: __init__.py  base.py  elgato.py  esphome.py  govee.py  hue.py  lifx.py  magic_home.py  shelly.py  tasmota.py  tuya.py  wled.py  yeelight.py
markslamp/templates/: index.html
tests/: conftest.py  test_alarms.py  test_calendar.py  test_clock.py  test_converters.py  test_meeting.py  test_models.py  test_pomodoro.py  test_reference.py  test_scanner.py  test_stopwatch.py  test_sun.py  test_switch_manager.py  test_timers.py  test_web.py  test_worldclock.py
