[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markslamp"
version = "0.1.0"
description = "Scan, discover, and control smart lamps across multiple protocols"
requires-python = ">=3.11"
dependencies = [
    "zeroconf>=0.131.0",
    "aiohttp>=3.9.0",
    "tinytuya>=1.13.0",
    "lifxlan>=1.2.7",
    "yeelight>=0.7.14",
    "flux-led>=1.0.4",
    "aioesphomeapi>=18.0.0",
    "phue>=1.1",
    "aioshelly>=8.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
markslamp = "markslamp.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
